--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1029,20 +1029,30 @@ section {
 
 .contact .php-email-form {
   width: 100%;
+  border-top: 3px solid #47b2e4;
+  border-bottom: 3px solid #47b2e4;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
 }
 
 .contact .php-email-form .form-group {
-  padding-bottom: 10px;
+  padding-bottom: 8px;
+}
+
+.contact .php-email-form .validate {
+  display: none;
+  color: red;
+  margin: 0 0 15px 0;
+  font-weight: 400;
+  font-size: 13px;
 }
 
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
-  text-align: left;
+  background: #18d26e;
+  text-align: center;
   padding: 15px;
   font-weight: 600;
 }
@@ -1054,7 +1064,7 @@ section {
 .contact .php-email-form .sent-message {
   display: none;
   color: #fff;
-  background: #029fe9;
+  background: #18d26e;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1074,9 +1084,17 @@ section {
   width: 24px;
   height: 24px;
   margin: 0 10px -6px 0;
-  border: 3px solid #029fe9;
+  border: 3px solid #18d26e;
   border-top-color: #eee;
   animation: animate-loading 1s linear infinite;
+}
+
+.contact .php-email-form .form-group {
+  margin-bottom: 20px;
+}
+
+.contact .php-email-form label {
+  padding-bottom: 8px;
 }
 
 .contact .php-email-form input,
@@ -1084,28 +1102,38 @@ section {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
+  border-radius: 4px;
+}
+
+.contact .php-email-form input:focus,
+.contact .php-email-form textarea:focus {
+  border-color: #47b2e4;
 }
 
 .contact .php-email-form input {
   height: 44px;
 }
 
-.contact .php-email-form textarea {
+.contact .php-email-form textarea{
   padding: 10px 12px;
 }
 
 .contact .php-email-form button[type=submit] {
   background: #029fe9;
   border: 0;
-  padding: 10px 30px;
+  padding: 12px 34px;
   color: #fff;
   transition: 0.4s;
   border-radius: 50px;
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #029fe9;
+  background: #4cbce4;
 }
+.php-email-form label{
+  margin-top: 10px;
+}
+
 
 @keyframes animate-loading {
   0% {
@@ -1115,6 +1143,23 @@ section {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.tab{
+  width: 100%;
+  height: 40px;
+  border: solid 1px grey;
+}
+.tab:hover{
+  border: 1px solid aqua;
+}
+
+#thank-you-message {
+  display: none;
+}
+
+#thank-you-message.show {
+  display: block;
 }
 
 /*--------------------------------------------------------------
