--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1051,7 +1051,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #18d26e;
+  background: red;
   text-align: center;
   padding: 15px;
   font-weight: 600;
