--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -992,19 +992,21 @@ section {
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
+  border-top: 3px solid #47b2e4;
+  border-bottom: 3px solid #47b2e4;
   padding: 30px;
-  width: 100%;
   background: #fff;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.1);
 }
 
 .contact .info i {
   font-size: 20px;
-  color: #fff;
+  color: #47b2e4;
   float: left;
   width: 44px;
   height: 44px;
-  background: #029fe9;
+  background: #e7f5fb;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1017,14 +1019,49 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #36343a;
+  color: #37517e;
 }
 
 .contact .info p {
-  padding: 0 0 0 60px;
-  margin-bottom: 0;
+  padding: 0 0 10px 60px;
+  margin-bottom: 20px;
   font-size: 14px;
-  color: #686470;
+  color: #6182ba;
+}
+
+.contact .info .email p {
+  padding-top: 5px;
+}
+
+.contact .info .social-links {
+  padding-left: 60px;
+}
+
+.contact .info .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #333;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+  margin-right: 10px;
+}
+
+.contact .info .social-links a:hover {
+  background: #47b2e4;
+  color: #fff;
+}
+
+.contact .info .email:hover i,
+.contact .info .address:hover i,
+.contact .info .phone:hover i {
+  background: #47b2e4;
+  color: #fff;
 }
 
 .contact .php-email-form {
@@ -1051,7 +1088,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: red;
+  background: #18d26e;
   text-align: center;
   padding: 15px;
   font-weight: 600;
@@ -1119,7 +1156,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #029fe9;
+  background: #47b2e4;
   border: 0;
   padding: 12px 34px;
   color: #fff;
@@ -1128,7 +1165,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #4cbce4;
+  background: #209dd8;
 }
 .php-email-form label{
   margin-top: 10px;
@@ -1161,7 +1198,6 @@ section {
 #thank-you-message.show {
   display: block;
 }
-
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
