--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1088,8 +1088,8 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #18d26e;
-  text-align: center;
+  background: #ed3c0d;
+  text-align: left;
   padding: 15px;
   font-weight: 600;
 }
@@ -1151,7 +1151,7 @@ section {
   height: 44px;
 }
 
-.contact .php-email-form textarea{
+.contact .php-email-form textarea {
   padding: 10px 12px;
 }
 
@@ -1167,10 +1167,6 @@ section {
 .contact .php-email-form button[type=submit]:hover {
   background: #209dd8;
 }
-.php-email-form label{
-  margin-top: 10px;
-}
-
 
 @keyframes animate-loading {
   0% {
@@ -1180,23 +1176,6 @@ section {
   100% {
     transform: rotate(360deg);
   }
-}
-
-.tab{
-  width: 100%;
-  height: 40px;
-  border: solid 1px grey;
-}
-.tab:hover{
-  border: 1px solid aqua;
-}
-
-#thank-you-message {
-  display: none;
-}
-
-#thank-you-message.show {
-  display: block;
 }
 /*--------------------------------------------------------------
 # Breadcrumbs
